# milpa-core

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.yml  index.html  jornal  mkdocs.yml  package.json  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
01-introduccion/: index.html
02-instalacion/: index.html
03-configuracion/: index.html
04-estructura-directorios/: index.html
05-ciclo-de-vida/: index.html
06-monolito-modular/: index.html
07-rutas-y-controladores/: index.html
08-consola-jornal/: index.html
09-vistas/: index.html
10-correo/: index.html
11-colas-y-tareas/: index.html
12-programacion-cron/: index.html
13-localizacion-i18n/: index.html
14-logging/: index.html
15-autenticacion/: index.html
16-base-de-datos/: index.html
17-modelos/: index.html
18-repositorios-y-transacciones/: index.html
Tests/: conftest.py  test_lazy.py  test_scan.py
Tests/Core/: test_Clock.py  test_Cron.py  test_FrameworkIsGeneric.py  test_FreeLayoutDiscovery.py  test_ModelDiscovery.py  test_PublicApi.py
Tests/Core/Auth/: test_Auth.py  test_Authorization.py  test_Hash.py  test_Passport.py  test_PassportGuard.py  test_PassportSecurity.py  test_Policy.py  test_Scopes.py  test_SessionGuard.py  test_TokenSecurity.py
Tests/Core/CeleryApp/: test_Dispatch.py  test_QueueNamespace.py  test_Retry.py  test_WorkerTaskDiscovery.py
Tests/Core/Config/: test_BrokerSettings.py  test_CookieSettings.py  test_EnvFileLocation.py
Tests/Core/Console/: test_CliErrorBoundary.py  test_Console.py  test_DiscoveryLoud.py  test_FormatCommandList.py  test_JornalLauncher.py  test_LauncherCommands.py  test_MakeWritesToAppDir.py  test_NewCommands.py  test_QueueWorkPool.py  test_Scaffold.py  test_ScheduleRunCommand.py  test_ScheduleWorkCommand.py  test_ServeWorkers.py
Tests/Core/Cron/: test_LockKeyNamespace.py  test_LockStoreError.py  test_Schedule.py
Tests/Core/Database/: test_Factory.py  test_FakerLazy.py  test_Filtering.py  test_Migrations.py  test_Repository.py  test_Seeder.py  test_Session.py  test_Transactional.py
Tests/Core/Events/: test_EventDispatch.py  test_EventsQueue.py  test_Observer.py
Tests/Core/Http/: test_Csrf.py  test_ExceptionHandler.py  test_FallbackDiscovery.py  test_FallbackOrder.py  test_Middleware.py  test_RateLimit.py  test_Routing.py  test_SecurityHeaders.py  test_Shell.py  test_ViteMount.py
Tests/Core/Jobs/: test_Jobs.py
Tests/Core/Mail/: test_Mail.py  test_MailDriver.py  test_Mailable.py  test_Mailer.py  test_MailerDispatch.py  test_Tasks.py
Tests/Core/Mediator/: test_Mediator.py
Tests/Core/Pipeline/: test_Pipeline.py
Tests/Core/Registry/: test_Registry.py
Tests/Core/Translate/: test_AcceptLanguage.py  test_I18n.py
Tests/Core/View/: test_Negotiation.py  test_Pwa.py  test_TemplateEngine.py  test_Vite.py
Tests/Modules/Demo/: test_DemoBuildingBlocks.py  test_DemoFlows.py
Tests/Modules/Example/Http/: test_controller.py  test_hello_dispatch.py  test_locale.py  test_secured.py
Tests/Modules/Example/Resources/: test_resources.py
documentation/: 01-introduccion.md  02-instalacion.md  03-configuracion.md  04-estructura-directorios.md  05-ciclo-de-vida.md  06-monolito-modular.md  07-rutas-y-controladores.md  08-consola-jornal.md  09-vistas.md  10-correo.md  11-colas-y-tareas.md  12-programacion-cron.md  13-localizacion-i18n.md  14-logging.md  15-autenticacion.md  16-base-de-datos.md  17-modelos.md  18-repositorios-y-transacciones.md  19-eventos-y-observers.md  20-mediator.md  21-pipeline.md  22-jobs.md  23-versionado-api.md  24-rate-limiting.md  25-filtrado-y-paginacion.md  26-negociacion-de-contenido.md  27-serializadores.md  28-errores-y-rfc9457.md  29-vite-y-assets.md  30-microfrontends-surcos.md  31-pwa.md  32-lazy-y-scan.md  33-estabilidad-y-versionado.md  README.md
migrations/: env.py
migrations/versions/: a7c1d9e2f4b8_add_archived_to_notes.py  c35b0c89ce97_demo_users_and_notes.py
search/: search_index.json
src/milpa/: __init__.py  lazy.py  scan.py
src/milpa/Core/: Discovery.py
src/milpa/Core/Auth/: Auth.py  Authorization.py  Contracts.py  Guards.py  Hash.py  Passport.py  Providers.py  Tokens.py  __init__.py
src/milpa/Core/CeleryApp/: CeleryApp.py  Dispatch.py  Retry.py  __init__.py
src/milpa/Core/Clock/: Clock.py  __init__.py
src/milpa/Core/Config/: Settings.py  __init__.py
src/milpa/Core/Console/: Cli.py  Console.py  Scaffold.py  __init__.py
src/milpa/Core/Cron/: Cron.py  Schedule.py  __init__.py
src/milpa/Core/Database/: Base.py  Factory.py  Faker.py  Filtering.py  Migrations.py  Repository.py  Seeder.py  Session.py  SoftDelete.py  Timestamp.py  Transactional.py  __init__.py
src/milpa/Core/Errors/: Errors.py  __init__.py
src/milpa/Core/Events/: Dispatch.py  Observer.py  Tasks.py  __init__.py
src/milpa/Core/Http/: Csrf.py  ExceptionHandler.py  Http.py  Middleware.py  ProblemDetails.py  RateLimit.py  Routing.py  SecurityHeaders.py  Shell.py  __init__.py
src/milpa/Core/Jobs/: Jobs.py  __init__.py
src/milpa/Core/Logging/: Logging.py  __init__.py
src/milpa/Core/Mail/: Mail.py  Mailable.py  Mailer.py  Tasks.py  __init__.py
src/milpa/Core/Mediator/: Mediator.py  __init__.py
src/milpa/Core/Pipeline/: Pipeline.py  __init__.py
src/milpa/Core/Registry/: Registry.py  __init__.py
src/milpa/Core/Translate/: I18n.py  __init__.py
src/milpa/Core/View/: Pwa.py  TemplateEngine.py  View.py  Vite.py  __init__.py
src/milpa/Dictionaries/: __init__.py
src/milpa/Models/: Note.py  User.py  __init__.py
src/milpa/Modules/Demo/: Commands.py  Events.py  Policies.py  Serializers.py  __init__.py
src/milpa/_skeleton/: .env.example.tmpl  .gitignore.tmpl  README.md.tmpl  docker-compose.yml.tmpl  jornal.tmpl  pyproject.toml.tmpl
src/milpa/_skeleton_demo/: package.json.tmpl  pnpm-workspace.yaml.tmpl
(+109 files in other folders)
